tests/baselines/reference/asyncArrowFunction_allowJs.errors.txt
tests/cases/conformance/async/es2017/asyncArrowFunction/file.js(3,17): error TS2322: Type '0' is not assignable to type 'string'.
tests/cases/conformance/async/es2017/asyncArrowFunction/file.js(7,23): error TS2322: Type '0' is not assignable to type 'string'.
tests/cases/conformance/async/es2017/asyncArrowFunction/file.js(12,2): error TS2322: Type '0' is not assignable to type 'string'.
tests/cases/conformance/async/es2017/asyncArrowFunction/file.js(19,3): error TS2345: Argument of type '() => Promise<number>' is not assignable to parameter of type '() => string'.
  Type 'Promise<number>' is not assignable to type 'string'.


==== tests/cases/conformance/async/es2017/asyncArrowFunction/file.js (4 errors) ====
    // Error (good)
    /** @type {function(): string} */
    const a = () => 0
                    ~
!!! error TS2322: Type '0' is not assignable to type 'string'.
    
    // Error (good)
    /** @type {function(): string} */
    const b = async () => 0
                          ~
!!! error TS2322: Type '0' is not assignable to type 'string'.
    
    // No error (bad)
    /** @type {function(): string} */
    const c = async () => {
    	return 0
    	~~~~~~~~
!!! error TS2322: Type '0' is not assignable to type 'string'.
    }
    
    /** @type {function(function(): string): void} */
    const f = (p) => {}
    
    // Error (good)
    f(async () => {
      ~~~~~~~~~~~~~
!!! error TS2345: Argument of type '() => Promise<number>' is not assignable to parameter of type '() => string'.
!!! error TS2345:   Type 'Promise<number>' is not assignable to type 'string'.
    	return 0
    })